# lindera

./: .dockerignore  .gitignore  .markdownlint.json  404.html  AUTHORS  BENCHMARKING.md  CHANGES.md  Cargo.toml  Dockerfile  LICENSE  Lindera_Individual_CLA.md  Makefile  PHASE6_HANDOFF.md  README.md  README_ja.md  REFACTORING_PLAN.md  TRAINER_README.md  TRAINER_README_ADDITIONAL.md  advanced_usage.html  all_modified_files.txt  api_reference.html  architecture.html  cli.html  clippy_modified_files.txt  clippy_output.txt  concepts.html  configuration.html  contributing.html  development.html  dictionaries.html  formatted_files.txt  getting_started.html  index.html  installation.html  introduction.html  lindera-analysis.html  lindera-cc-cedict.html  lindera-cli.html  lindera-crf.html  lindera-dictionary.html  (+18 more)
lindera-analysis/: Cargo.toml  README.md  api_reference.html  architecture.html  configuration.html  filters.html
lindera-analysis/examples/: tokenize.rs  tokenize_with_config.rs  tokenize_with_filters.rs  tokenize_with_user_dict.rs
lindera-analysis/src/: character_filter.rs  lib.rs  token_filter.rs  tokenizer.rs
lindera-analyzer/: Cargo.toml  README.md
lindera-analyzer/examples/: analysis.rs
lindera-analyzer/src/: analyzer.rs  lib.rs  token.rs  token_filter.rs
lindera-assets/: Cargo.toml  README.md
lindera-assets/src/: lib.rs
lindera-binding-core/: Cargo.toml
lindera-binding-core/src/: error.rs  lib.rs  metadata.rs  schema.rs  token.rs  tokenizer.rs
lindera-cc-cedict/: Cargo.toml  README.md  README_ja.md  build.html  build.rs  dictionary_format.html  examples.html  metadata.json
lindera-cc-cedict-builder/: Cargo.toml  README.md
lindera-cc-cedict-builder/src/: cc_cedict_builder.rs  lib.rs  main.rs
lindera-cc-cedict/src/: builder.rs  cc_cedict.rs  embedded.rs  lib.rs  loader.rs  metadata.rs  schema.rs
lindera-cli/: Cargo.toml  README.md  README_ja.md  commands.html  installation.html  tutorial.html
lindera-cli/examples/: input.txt
lindera-cli/src/: lib.rs  main.rs
lindera-cli/tests/: cli.rs
lindera-compress/: Cargo.toml  README.md
lindera-compress/src/: lib.rs
lindera-core/: Cargo.toml  README.md
lindera-core/src/: assets.rs  character_definition.rs  character_filter.rs  compress.rs  connection.rs  core.rs  dictionary.rs  dictionary_builder.rs  dictionary_loader.rs  error.rs  file_util.rs  lib.rs  mode.rs  prefix_dict.rs  token.rs  token_filter.rs  unknown_dictionary.rs  user_dictionary.rs  viterbi.rs  word_entry.rs
lindera-crf/: Cargo.toml  README.md  README_ja.md  api_reference.html  architecture.html
lindera-crf/src/: errors.rs  feature.rs  forward_backward.rs  lattice.rs  lib.rs  math.rs  model.rs  optimizers.rs  test_utils.rs  trainer.rs  utils.rs
lindera-decompress/: Cargo.toml  README.md
lindera-decompress/src/: lib.rs
lindera-dictionary/: Cargo.toml  FILES.md  README.md  README_ja.md  api_reference.html  architecture.html
lindera-dictionary-builder/: Cargo.toml  README.md
lindera-dictionary-builder/src/: chardef.rs  compress.rs  cost_matrix.rs  dict.rs  lib.rs  unk.rs  user_dict.rs  utils.rs
lindera-dictionary/benches/: bench_build.rs
lindera-dictionary/src/: assets.rs  builder.rs  compress.rs  decompress.rs  dictionary.rs  dictionary_builder.rs  dictionary_loader.rs  error.rs  lib.rs  macros.rs  mode.rs  nbest.rs  trainer.rs  util.rs  viterbi.rs
lindera-dictionary/tests/: build_dictionary.rs  trainer_tests.rs
lindera-filter/: Cargo.toml  README.md
lindera-filter/src/: character_filter.rs  lib.rs  token.rs  token_filter.rs
lindera-ipadic/: Cargo.toml  NOTICE.txt  README.md  README_ja.md  build.html  build.rs  dict.fst  dict.vals  dictionary_format.html  examples.html  metadata.json
lindera-ipadic-builder/: Cargo.toml  README.md  detailed_user_dict.csv  user_dict.csv
lindera-ipadic-builder/src/: builder.rs  error.rs  ipadic_builder.rs  lib.rs  main.rs
lindera-ipadic-neologd/: Cargo.toml  README.md  README_ja.md  build.html  build.rs  dictionary_format.html  examples.html  metadata.json
lindera-ipadic-neologd-builder/: Cargo.toml  README.md
lindera-ipadic-neologd-builder/src/: ipadic_neologd_builder.rs  lib.rs
lindera-ipadic-neologd/src/: builder.rs  embedded.rs  ipadic_neologd.rs  lib.rs  loader.rs  metadata.rs  schema.rs
lindera-ipadic/lindera-ipadic/: dict.wordsidx
lindera-ipadic/src/: builder.rs  embedded.rs  ipadic.rs  lib.rs  loader.rs  metadata.rs  schema.rs
lindera-jieba/: Cargo.toml  README.md  README_ja.md  build.html  build.rs  dictionary_format.html  examples.html  metadata.json
lindera-jieba/src/: embedded.rs  lib.rs
lindera-ko-dic/: Cargo.toml  README.md  README_ja.md  build.html  build.rs  dictionary_format.html  examples.html  metadata.json
lindera-ko-dic-builder/: Cargo.toml  NOTICE.txt  README.md
lindera-ko-dic-builder/src/: ko_dic_builder.rs  lib.rs  main.rs
lindera-ko-dic/src/: builder.rs  embedded.rs  ko_dic.rs  lib.rs  loader.rs  metadata.rs  schema.rs
lindera-nodejs/: .gitignore  .npmignore  Cargo.toml  README.md  README_ja.md  dictionary_management.html  installation.html  package.json  quickstart.html  text_processing_pipeline.html  tokenizer_api.html  training.html
lindera-nodejs/examples/: README.md  README_ja.md  build_ipadic.js  tokenize.js  (+4 more)
lindera-php/: .php-cs-fixer.dist.php  CHANGES.md  Cargo.toml  README.md  README_ja.md  build.rs  composer.json  dictionary_management.html  installation.html  quickstart.html  text_processing_pipeline.html  tokenizer_api.html  training.html
lindera-python/: .gitignore  CHANGES.md  Cargo.toml  LICENSE  Makefile  README.md  README_ja.md  dictionary_management.html  installation.html  pyproject.toml  quickstart.html  text_processing_pipeline.html  tokenizer_api.html  training.html
lindera-tokenizer/: Cargo.toml  README.md
lindera-trainer/: Cargo.toml  README.md  api_reference.html  architecture.html
lindera-unidic/: Cargo.toml  README.md  README_ja.md  build.html  build.rs  context_id_freq.txt  dictionary_format.html  examples.html  metadata.json
lindera-unidic-builder/: Cargo.toml  NOTICE.txt  README.md
(+3888 files in other folders)
