[workspace]
members = [
    "lindera-crf",
    "lindera-dictionary",
    "lindera-cc-cedict",
    "lindera-jieba",
    "lindera-ipadic",
    "lindera-ipadic-neologd",
    "lindera-ko-dic",
    "lindera-unidic",
    "lindera",
    "lindera-cli",
    "lindera-python",
    "lindera-nodejs",
    "lindera-ruby",
    "lindera-php",
    "lindera-wasm",
]
resolver = "2"

[workspace.package]
version = "2.3.4"
edition = "2024"
description = "A morphological analysis libraries and command line interface."
documentation = "https://docs.rs/lindera"
homepage = "https://github.com/lindera/lindera"
repository = "https://github.com/lindera/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "dictionary", "cli"]
categories = ["text-processing"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
csv = "1.4.0"
daachorse = "1.0.1"
lindera = { version = "2.3.4", path = "lindera" }
lindera-crf = { version = "2.3.4", path = "lindera-crf" }
lindera-cc-cedict = { version = "2.3.4", path = "lindera-cc-cedict" }
lindera-cli = { version = "2.3.4", path = "lindera-cli" }
lindera-dictionary = { version = "2.3.4", path = "lindera-dictionary" }
lindera-ipadic = { version = "2.3.4", path = "lindera-ipadic" }
lindera-ipadic-neologd = { version = "2.3.4", path = "lindera-ipadic-neologd" }
lindera-jieba = { version = "2.3.4", path = "lindera-jieba" }
lindera-ko-dic = { version = "2.3.4", path = "lindera-ko-dic" }
lindera-nodejs = { version = "2.3.4", path = "lindera-nodejs" }
lindera-python = { version = "2.3.4", path = "lindera-python" }
lindera-ruby = { version = "2.3.4", path = "lindera-ruby" }
lindera-unidic = { version = "2.3.4", path = "lindera-unidic" }
lindera-php = { version = "2.3.4", path = "lindera-php" }
lindera-wasm = { version = "2.3.4", path = "lindera-wasm" }
log = "0.4.29"
num_cpus = "1.17.0"
once_cell = "1.21.4"
regex = "1.12.3"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
tokio = { version = "1.51.0", features = [
    "rt",
    "macros",
    "time",
    "sync",
    "io-util",
] }

[patch.crates-io]
ext-php-rs-clang-sys = { path = "patches/ext-php-rs-clang-sys" }

[profile.release]
lto = true

# Make sure that the build scripts and proc-macros are compiled with
# all the optimizations.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.bench.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[profile.release.package.lindera-wasm]
opt-level = "s"
