[workspace]
members = [
    "lindera-crf",
    "lindera-dictionary",
    "lindera-trainer",
    "lindera-cc-cedict",
    "lindera-jieba",
    "lindera-ipadic",
    "lindera-ipadic-neologd",
    "lindera-ko-dic",
    "lindera-unidic",
    "lindera",
    "lindera-analysis",
    "lindera-cli",
    "lindera-binding-core",
    "lindera-python",
    "lindera-nodejs",
    "lindera-ruby",
    "lindera-php",
    "lindera-wasm",
]
resolver = "2"

[workspace.package]
version = "4.0.1"
edition = "2024"
description = "A morphological analysis libraries and command line interface."
documentation = "https://docs.rs/lindera"
homepage = "https://github.com/lindera/lindera"
repository = "https://github.com/lindera/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "dictionary", "cli"]
categories = ["text-processing"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.104"
byteorder = "1.5.0"
csv = "1.4.0"
daachorse = "3.0.3"
lindera = { version = "4.0.1", path = "lindera" }
lindera-analysis = { version = "4.0.1", path = "lindera-analysis" }
lindera-binding-core = { version = "4.0.1", path = "lindera-binding-core" }
lindera-crf = { version = "4.0.1", path = "lindera-crf" }
lindera-cc-cedict = { version = "4.0.1", path = "lindera-cc-cedict" }
lindera-cli = { version = "4.0.1", path = "lindera-cli" }
lindera-dictionary = { version = "4.0.1", path = "lindera-dictionary" }
lindera-trainer = { version = "4.0.1", path = "lindera-trainer" }
lindera-ipadic = { version = "4.0.1", path = "lindera-ipadic" }
lindera-ipadic-neologd = { version = "4.0.1", path = "lindera-ipadic-neologd" }
lindera-jieba = { version = "4.0.1", path = "lindera-jieba" }
lindera-ko-dic = { version = "4.0.1", path = "lindera-ko-dic" }
lindera-nodejs = { version = "4.0.1", path = "lindera-nodejs" }
lindera-python = { version = "4.0.1", path = "lindera-python" }
lindera-ruby = { version = "4.0.1", path = "lindera-ruby" }
lindera-unidic = { version = "4.0.1", path = "lindera-unidic" }
lindera-php = { version = "4.0.1", path = "lindera-php" }
lindera-wasm = { version = "4.0.1", path = "lindera-wasm" }
log = "0.4.33"
num_cpus = "1.17.0"
once_cell = "1.21.4"
regex = "1.13.1"
rkyv = { version = "0.8.17", features = ["bytecheck"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
tokio = { version = "1.53.1", features = [
    "rt",
    "macros",
    "time",
    "sync",
    "io-util",
] }

[profile.release]
lto = true

# Make sure that the build scripts and proc-macros are compiled with
# all the optimizations.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.bench.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[profile.release.package.lindera-wasm]
opt-level = "s"
