[package]
name = "lindera-analyzer"
version = "0.27.1"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[features]
default = []  # No directories included
ipadic = ["lindera-tokenizer/ipadic"]  # Include IPADIC dictionary (Japanese)
ipadic-compress = ["lindera-tokenizer/ipadic-compress"]  # Compress IPADIC
ipadic-filter = []  # Include filters for IPADIC
ipadic-neologd = ["lindera-tokenizer/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
ipadic-neologd-compress = ["lindera-tokenizer/ipadic-neologd-compress"]  # Compress IPADIC
ipadic-neologd-filter = []  # Include filters for IPADIC NEologd
unidic = ["lindera-tokenizer/unidic"]  # Include UniDic dictionary (Japanese)
unidic-compress = ["lindera-tokenizer/unidic-compress"]  # Compress UniDic
unidic-filter = []  # Include filters for UniDic
ko-dic = ["lindera-tokenizer/ko-dic"]  # Include ko-dic dictionary (Korean)
ko-dic-compress = ["lindera-tokenizer/ko-dic-compress"]  # Compress ko-dic
ko-dic-filter = []  # Include filters for ko-dic
cc-cedict = ["lindera-tokenizer/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
cc-cedict-compress = ["lindera-tokenizer/cc-cedict-compress"]  # Compress CC-CEDICT
cc-cedict-filter = []  # Include filters for CC-CEDICT

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
byteorder = "1.4.3"
encoding = "0.2.33"
kanaria = "0.2.0"
once_cell = "1.18.0"
regex = "1.9.0"
serde = {version="1.0.167", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
unicode-blocks = "0.1.8"
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"
yada = "0.5.0"

lindera-cc-cedict-builder = { version = "0.27.1", path = "../lindera-cc-cedict-builder" }
lindera-core = { version = "0.27.1", path = "../lindera-core" }
lindera-dictionary = { version = "0.27.1", path = "../lindera-dictionary" }
lindera-ipadic-builder = { version = "0.27.1", path = "../lindera-ipadic-builder" }
lindera-ko-dic-builder = { version = "0.27.1", path = "../lindera-ko-dic-builder" }
lindera-tokenizer = { version = "0.27.1", path = "../lindera-tokenizer" }
lindera-unidic-builder = { version = "0.27.1", path = "../lindera-unidic-builder" }
