[package]
name = "lindera-analyzer"
version = "0.29.0"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[features]
default = []  # No directories included
ipadic = ["lindera-tokenizer/ipadic"]  # Include IPADIC dictionary (Japanese)
ipadic-neologd = ["lindera-tokenizer/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
unidic = ["lindera-tokenizer/unidic"]  # Include UniDic dictionary (Japanese)
ko-dic = ["lindera-tokenizer/ko-dic"]  # Include ko-dic dictionary (Korean)
cc-cedict = ["lindera-tokenizer/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
compress = ["lindera-tokenizer/compress"]  # Compress dictionaries
filter = []  # Include filters


[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
encoding.workspace = true
kanaria.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-blocks.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
yada.workspace = true

lindera-cc-cedict-builder.workspace = true
lindera-core.workspace = true
lindera-dictionary.workspace = true
lindera-filter.workspace = true
lindera-ipadic-builder.workspace = true
lindera-ko-dic-builder.workspace = true
lindera-tokenizer.workspace = true
lindera-unidic-builder.workspace = true
