[package]
name = "lindera-assets"
version = "0.32.2"
edition = "2021"
description = "A helper crate to fetch assets and build dictionary for lindera."
documentation = "https://docs.rs/lindera-assets"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary"]
categories = ["text-processing"]
license = "MIT"


[dependencies]
encoding = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
ureq = { workspace = true }

lindera-core.workspace = true
