[package]
name = "lindera-cc-cedict-builder"
version = "0.31.0"
edition = "2021"
description = "A Chinese morphological dictionary builder for CC-CEDICT."
documentation = "https://docs.rs/lindera-cc-cedict-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["chinese", "morphological", "dictionary", "builder", "cc-cedict"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-dictionary-builder/compress"]

[dependencies]
anyhow.workspace = true

lindera-core.workspace = true
lindera-decompress.workspace = true
lindera-dictionary-builder.workspace = true
