[package]
name = "lindera-cc-cedict"
version = "0.44.0"
edition = "2021"
description = "A Japanese morphological dictionary for CC-CEDICT."
documentation = "https://docs.rs/lindera-cc-cedict"
homepage = "https://github.com/lindera/lindera"
repository = "https://github.com/lindera/lindera"
readme = "README.md"
keywords = ["chinese", "morphological", "dictionary", "cc-cedict"]
categories = ["text-processing"]
license = "MIT"

[features]
cc-cedict = []
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
bincode.workspace = true
byteorder.workspace = true
once_cell.workspace = true

lindera-dictionary.workspace = true

[build-dependencies]
tokio.workspace = true
lindera-dictionary = { workspace = true, features = ["build_rs"] }
