[package]
name = "lindera-cc-cedict"
version = "1.4.0"
edition = "2024"
description = "A Japanese morphological dictionary for CC-CEDICT."
documentation = "https://docs.rs/lindera-cc-cedict"
homepage = "https://github.com/lindera/lindera"
repository = "https://github.com/lindera/lindera"
readme = "README.md"
keywords = ["chinese", "morphological", "dictionary", "cc-cedict"]
categories = ["text-processing"]
license = "MIT"

[features]
embedded-cc-cedict = []                    # Embed CC-CEDICT dictionary in the binary
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
csv.workspace = true
once_cell.workspace = true
serde_json.workspace = true

lindera-dictionary.workspace = true

[build-dependencies]
serde_json.workspace = true
tokio.workspace = true
lindera-dictionary = { workspace = true, features = ["build_rs"] }
