[package]
name = "lindera-cc-cedict"
version = { workspace = true }
edition = { workspace = true }
description = "A Chinese morphological dictionary for CC-CEDICT."
documentation = "https://docs.rs/lindera-cc-cedict"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["morphological", "analysis", "dictionary", "cc-cedict", "chinese"]
categories.workspace = true
license.workspace = true

[features]
embedded-cc-cedict = []                    # Embed CC-CEDICT dictionary in the binary
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
anyhow.workspace = true
rkyv.workspace = true
byteorder.workspace = true
csv.workspace = true
once_cell.workspace = true
serde_json.workspace = true

lindera-dictionary.workspace = true

[build-dependencies]
serde_json.workspace = true
tokio.workspace = true
lindera-dictionary = { workspace = true, features = ["build_rs"] }
