[package]
name = "lindera-cli"
version = "1.0.0"
edition = "2024"
description = "A morphological analysis command line interface."
documentation = "https://docs.rs/lindera-cli"
homepage = "https://github.com/lindera/lindera"
repository = "https://github.com/lindera/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "cli"]
categories = ["text-processing"]
license = "MIT"

[features]
embedded-ipadic = [
    "lindera/embedded-ipadic",
] # Embed IPADIC dictionary in the binary
embedded-ipadic-neologd = [
    "lindera/embedded-ipadic-neologd",
] # Embed IPADIC-NEologd dictionary in the binary
embedded-unidic = [
    "lindera/embedded-unidic",
] # Embed UniDic dictionary in the binary
embedded-ko-dic = [
    "lindera/embedded-ko-dic",
] # Embed ko-dic dictionary in the binary
embedded-cc-cedict = [
    "lindera/embedded-cc-cedict",
] # Embed CC-CEDICT dictionary in the binary

embedded-cjk = [
    "lindera/embedded-cjk",
] # Embed CJK dictionaries (IPADIC, ko-dic, CC-CEDICT) in the binary
embedded-cjk2 = [
    "lindera/embedded-cjk2",
] # Embed CJK dictionaries (UniDic, ko-dic, CC-CEDICT) in the binary
embedded-cjk3 = [
    "lindera/embedded-cjk3",
] # Embed CJK dictionaries (IPADIC NEologd, ko-dic, CC-CEDICT) in the binary

compress = ["lindera/compress"] # Compress dictionaries
mmap = ["lindera/mmap"]         # Use memory-mapped file
default = ["lindera/default"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true

lindera.workspace = true

[[bin]]
name = "lindera"
path = "src/main.rs"
