[package]
name = "lindera-cli"
version = { workspace = true }
edition = { workspace = true }
description = "A morphological analysis CLI."
documentation = "https://docs.rs/lindera-cli"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["morphological", "analysis", "cli"]
categories.workspace = true
license.workspace = true

[features]
embedded-ipadic = [
    "lindera/embedded-ipadic",
] # Embed IPADIC dictionary in the binary
embedded-ipadic-neologd = [
    "lindera/embedded-ipadic-neologd",
] # Embed IPADIC-NEologd dictionary in the binary
embedded-unidic = [
    "lindera/embedded-unidic",
] # Embed UniDic dictionary in the binary
embedded-ko-dic = [
    "lindera/embedded-ko-dic",
] # Embed ko-dic dictionary in the binary
embedded-cc-cedict = [
    "lindera/embedded-cc-cedict",
] # Embed CC-CEDICT dictionary in the binary

embedded-cjk = [
    "lindera/embedded-cjk",
] # Embed CJK dictionaries (IPADIC, ko-dic, CC-CEDICT) in the binary
embedded-cjk2 = [
    "lindera/embedded-cjk2",
] # Embed CJK dictionaries (UniDic, ko-dic, CC-CEDICT) in the binary
embedded-cjk3 = [
    "lindera/embedded-cjk3",
] # Embed CJK dictionaries (IPADIC NEologd, ko-dic, CC-CEDICT) in the binary

compress = ["lindera/compress"]         # Compress dictionaries
mmap = ["lindera/mmap"]                 # Use memory-mapped file
train = ["lindera/train"]               # Enable training functionality
default = ["compress", "mmap", "train"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
num_cpus.workspace = true
serde_json.workspace = true

lindera.workspace = true

[[bin]]
name = "lindera"
path = "src/main.rs"
