[package]
name = "lindera-cli"
version = { workspace = true }
edition = { workspace = true }
description = "A morphological analysis CLI."
documentation = "https://docs.rs/lindera-cli"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["morphological", "analysis", "cli"]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-ipadic = [
    "lindera/embed-ipadic",
] # Embed IPADIC dictionary in the binary
embed-ipadic-neologd = [
    "lindera/embed-ipadic-neologd",
] # Embed IPADIC-NEologd dictionary in the binary
embed-unidic = [
    "lindera/embed-unidic",
] # Embed UniDic dictionary in the binary
embed-ko-dic = [
    "lindera/embed-ko-dic",
] # Embed ko-dic dictionary in the binary
embed-cc-cedict = [
    "lindera/embed-cc-cedict",
] # Embed CC-CEDICT dictionary in the binary

embed-cjk = [
    "lindera/embed-cjk",
] # Embed CJK dictionaries (IPADIC, ko-dic, CC-CEDICT) in the binary
embed-cjk2 = [
    "lindera/embed-cjk2",
] # Embed CJK dictionaries (UniDic, ko-dic, CC-CEDICT) in the binary
embed-cjk3 = [
    "lindera/embed-cjk3",
] # Embed CJK dictionaries (IPADIC NEologd, ko-dic, CC-CEDICT) in the binary

compress = ["lindera/compress"]         # Compress dictionaries
mmap = ["lindera/mmap"]                 # Use memory-mapped file
train = ["lindera/train"]               # Enable training functionality
default = ["compress", "mmap", "train"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
num_cpus = { workspace = true }
serde_json = { workspace = true }

lindera = { workspace = true }

[[bin]]
name = "lindera"
path = "src/main.rs"
