[package]
name = "lindera-compress"
version = "0.17.0"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-compress"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow = "1.0.58"

lindera-decompress = { version = "0.17.0", path = "../lindera-decompress" }

[target.'cfg(windows)'.dependencies]
lzma-rs = "0.2.0"

[target.'cfg(not(windows))'.dependencies]
rust-lzma = { version = "0.5.1"}

[dev-dependencies]
rand = "0.8.5"
