[package]
name = "lindera-compress"
version = "0.19.0"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-compress"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow = "1.0.68"
flate2 = "1.0.25"

lindera-decompress = { version = "0.19.0", path = "../lindera-decompress" }

[dev-dependencies]
rand = "0.8.5"
