[package]
name = "lindera-compress"
version = "0.32.3"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-compress"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow.workspace = true
flate2.workspace = true

lindera-decompress.workspace = true

[dev-dependencies]
rand.workspace = true
