[package]
name = "lindera-core"
version = "0.27.1"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-core"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
byteorder = "1.4.3"
encoding_rs = "0.8.32"
log = "0.4.19"
once_cell = "1.18.0"
serde = {version="1.0.167", features = ["derive"] }
thiserror = "1.0.43"
yada = "0.5.0"
