[package]
name = "lindera-core"
version = "0.27.2"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-core"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
encoding_rs.workspace = true
log.workspace = true
once_cell.workspace = true
serde.workspace = true
thiserror.workspace = true
yada.workspace = true
