[package]
name = "lindera-decompress"
version = "0.27.1"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-decompress"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow = "1.0.71"
flate2 = "1.0.26"
serde = { version = "1.0.167", features = ["derive"]}
