[package]
name = "lindera-decompress"
version = "0.28.0"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-decompress"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow.workspace = true
flate2.workspace = true
serde.workspace = true
