[package]
name = "lindera-dictionary-builder"
version = "0.30.0"
edition = "2021"
description = "Shared code for building Lindera dictionary files"
documentation = "https://docs.rs/lindera-dictionary-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "unidic"]
categories = ["text-processing"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
csv.workspace = true
encoding.workspace = true
glob.workspace = true
log.workspace = true
yada.workspace = true
derive_builder.workspace = true

lindera-core.workspace = true
lindera-decompress.workspace = true
